add underline in current menu element

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -23,6 +23,9 @@
             &:hover {
                 text-decoration: underline;
             }
+            &.active {
+                text-decoration: underline;
+            }
         }
     }
 
