--- a/src/index.scss
+++ b/src/index.scss
@@ -26,7 +26,7 @@ body {
 main {
     max-width: 1440px;
     margin: 3% auto;
-    padding: 0 8%;
+    padding: 0 20px;
 }
 
 // Responsive pour tablette
