--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -10,6 +10,18 @@
         height: 340px;
         overflow: hidden;
         position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
+            z-index: 1;
+            pointer-events: none; 
+        }
     }
 
     &__img {
@@ -17,6 +29,8 @@
         height: 100%;
         object-fit: cover;
         transition: transform 0.3s ease;
+        position: relative;
+        z-index: 0;
     }
 
     &__title {
@@ -29,10 +43,7 @@
         font-size: 18px;
         text-align: left;
         margin: 0;
-    }
-
-    &:hover figure {
-        background: linear-gradient(rgba(7, 7, 7, 0), rgba(0, 0, 0, 0.6));
+        z-index: 2;
     }
 
     &:hover &__img {
